Fix Media.AudioService.ObservedProcessTerminationStatus UMA stat collection.

Add audio service listener to browser child process listeners and reset |process_id_| when
audio process crashes, is killed or disconnected, instead of when service is stopped.

When running audio service out of process there are 4 possible ways to terminate audio process,
as shown in this[1] state diagram: audio service is stopped, audio process is killed,
audio process crashed or browser is shutdown. Notes:
- BrowserChildProcessHostDisconnected always gets called on BrowserChildProcessHostImpl destructor.
  Resetting |process_id_| on kill/crash ensures kDisconnect is not logged to UMA stat on kill/crash.
- On browser shutdown, if audio service does not call quit closure when it shuts down (i.e. when
  quit timeout is not set), UMA stat is not logged.
- When running audio service in process, |process_id_| is always kNullProcessId, and UMA stat is
  not logged.

[1] https://docs.google.com/drawings/d/1HfT5YIXWh3F4ScP6otnjOCfh1ewQmd7HUfVVvsdKtUc/edit?usp=sharing

Unrelated change: removed connector member from listener, it was only used in constructor.

Bug: 848198
Change-Id: Iadec84cd2bc72ea05fcc88eeb86333fa0f57f592
Reviewed-on: https://chromium-review.googlesource.com/1080189
Commit-Queue: Marina Ciocea <marinaciocea@chromium.org>
Reviewed-by: Max Morin <maxmorin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563572}
Former-commit-id: 492c922d15b9a4be21139a31736b538bc2a37f76